<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:orientation="vertical"
    android:padding="@dimen/widget_padding">

    <TextView
        android:id="@+id/widget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/widget_next_alarm_short"
        android:textColor="@color/widget_accent"
        android:textSize="12sp"
        android:textStyle="bold"
        android:letterSpacing="0.1" />

    <TextView
        android:id="@+id/widget_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/widget_text"
        android:textSize="34sp"
        android:includeFontPadding="false"
        android:paddingTop="2dp"
        android:text="@string/widget_no_alarm"
        tools:text="07:30" />

    <TextView
        android:id="@+id/widget_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/widget_loading"
        android:textColor="@color/widget_text_muted"
        android:textSize="@dimen/widget_text_small"
        tools:text="in 8h 24m" />

</LinearLayout>
